[package]
name = "contador_palavras"
version = "0.1.0"
authors = ["victorinno <rotc21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.6.2"
structopt = "0.3.18"
quicli = "0.4.0"
walkdir = "2.3.1"
glob = "0.3.0"
csv = "1.1.3"
